# voice-assistant-bot-backend

./: .env  .env.example  .gitignore  01_TimingObserverInstrumentQueueDwellTime.py  02_LLMPrimingAndMinimalising.py  03_TightenSTT_VAD_Behaviour.py  05_ParallelizeToolAccess.py  bot copy 2.py  bot copy.py  bot.py  bot_final.py  db_tools.py  orders.db  pyproject.toml  rag.py  voicebot_twilio.py
docs/: llm_priming_and_context_minimalisation.md  parallel_tool_access.md  stt_vad_tightening.md  timing_observer_queue_dwell.md  tts_startup_latency.md
examples/: twilio_minimal.py
